# swe-review

./: .env.example  .gitignore  Cargo.toml  README.md  SKILL.md
.github/workflows/: release-artifacts.yml
src/: cli.rs  credentials.rs  diff.rs  lib.rs  lifeguard.rs  lifeguard_rules.rs  main.rs  protobuf.rs  quick_review.rs  review_common.rs  review_options.rs  upstream.rs  util.rs
src/credentials/: auth_db.rs  config.rs  devin.rs  resolve.rs
src/upstream/: client.rs  encode.rs  parse.rs  render.rs  transport.rs
tests/: cli.rs
