[package]
name = "swe-review"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
description = "Standalone Devin/Windsurf Quick Review CLI"
readme = "README.md"
license = "MIT"

[[bin]]
name = "swe-review"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.12"
toml = "1.1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
flate2 = "1"
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
